Fixed spacing problem in TOC lists.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk/extensions/UsabilityInitiative@54322 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/combined.css
+++ b/css/combined.css
@@ -311,6 +311,8 @@ body.rtl .wikiEditor-ui .wikiEditor-ui-toolbar .section-booklet-characters .page
 	padding: 0;
 	margin: 0;
 	margin-left: 0.75em;
+	margin-bottom: 0 !important;
+	margin-top: 0 !important;
 	list-style: none;
 }
 .wikiEditor-ui .wikiEditor-ui-toc ul li a {
